--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,24 @@ span {
 .picBlock {
   inset: 0 9%;
 }
+
+.instagram-icon {
+  color: #a0aec0; /* Initial gray color */
+  transition: color 0.1s ease, transform 0.1s ease;
+  background-color: transparent; /* Ensure no background shows */
+}
+
+.instagram-icon:hover {
+  color: transparent;
+  background-image: linear-gradient(
+    45deg,
+    #feda75,
+    #fa7e1e,
+    #d62976,
+    #962fbf,
+    #4f5bd5
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  transform: translate(0.125rem, 0.125rem);
+}
